--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         </div>
         <div class="title-pic">
             <img src="img/01.png" alt="">
+            <div class="event-title">
+                <p>11/1-11/11</p>
+                <p>DOUBLE ELEVEN</p>
+                <P>1111享乐生活节</P>
+            </div>
             <img src="img/02.png" alt="">
-        </div>
-        <div class="event-title">
-            <p>11/1-11/11</p>
-            <p>DOUBLE ELEVEN</p>
-            <P>1111享乐生活节</P>
         </div>
         <div class="event-button-square">
             <div class="event-button" target="event-1">超值单品111元</div>
@@ -32,7 +32,11 @@
     </section>
     <section name="event-1" class="event event-1">
         <h3>超值单品111元</h3>
-
+        <div class="cardsBar">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
         <div class="click-button">
             <a href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">點我前往</a>
         </div>
