--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Noto+Sans+TC|ZCOOL+QingKe+HuangYou&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Noto+Sans+TC|Noto+Sans+SC|ZCOOL+QingKe+HuangYou&display=swap"
     rel="stylesheet">    
     <title>Filter017 1111享乐生活节</title>
 </head>
@@ -34,19 +34,22 @@
         <h3>超值单品111元</h3>
         <div class="cardsBar">
             <div class="card">
-                <img src="img/pd1.jpg" alt="">
+                <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
+                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
             <div class="card">
-                <img src="img/pd1.jpg" alt="">
+                <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
+                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
             <div class="card">
-                <img src="img/pd1.jpg" alt="">
+                <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
+                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
         </div>
         <div class="click-button">
