--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="click-button">
-            <a href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">點我前往</a>
+            <a href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">查看更多</a>
         </div>
         <img src="img/7.png" alt="">
     </section>
