--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
-                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
-                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
-                <div class="buy"><a href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>$268</del>$111</p>
-                <div class="buy"><a
+                <div class="buy"><a  target="_blank"
                         href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a>
                 </div>
             </div>
         </div>
         <div class="click-button">
-            <a href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">查看更多</a>
+            <a target="_blank" href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">查看更多</a>
         </div>
         <img src="img/7.png" alt="">
     </section>
