--- a/index.html
+++ b/index.html
@@ -24,39 +24,40 @@
             <img src="img/02.png" alt="">
         </div>
         <div class="event-button-square">
-            <div class="event-button" target="event-1">超值单品111元</div>
-            <div class="event-button">新品限时7折优惠</div>
-            <div class="event-button">袜款买一送一</div>
-            <div class="event-button">精选帽款99专区</div>
+            <div class="event-button"><a href="#event-1">超值单品111元</a></div>
+            <div class="event-button"><a href="#event-2">新品限时7折优惠</a></div>
+            <div class="event-button"><a href="#event-3">袜款买一送一</a></div>
+            <div class="event-button"><a href="#event-4">精选帽款99专区</a></div>
         </div>
     </section>
-    <section name="event-1" class="event event-1">
+    <section id="event-1" class="event event-1">
         <h3>超值单品111元</h3>
+        <p class="event-content">11/01 - 11/11 专区商品全面下杀至¥111</p>
         <div class="cardsBar">
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
-                <p><del>$268</del>$111</p>
-                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
-                <p><del>$268</del>$111</p>
-                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
-                <p><del>$268</del>$111</p>
-                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a></div>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
-                <p><del>$268</del>$111</p>
+                <p><del>¥268</del><span> ¥111</span></p>
                 <div class="buy"><a  target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击购买</a>
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
                 </div>
             </div>
         </div>
@@ -64,6 +65,130 @@
             <a target="_blank" href="https://filter017.world.taobao.com/category-1491489494.htm?spm=a312a.7700824.w5003-16801910812.1.5cee21dfdExvdc&search=y&catName=111%D4%AA%CC%D8%BB%DD%C9%CC%C6%B7%D7%A8%C7%F8&scene=taobao_shop#bd">查看更多</a>
         </div>
         <img src="img/7.png" alt="">
+    </section>
+    <section id="event-2" class="event event-2">
+        <h3>限时必杀新品 七折优惠</h3>
+        <p class="event-content">11/11 准时开抢 售完为止</p>
+        <div class="cardsBar">
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+        </div>
+        <div class="picbox">
+            <img src="img/03.png" alt="">
+            <img src="img/04.png" alt="">
+        </div>
+    </section>
+    <section id="event-3" class="event event-3">
+        <h3>精选袜款 买一送一</h3>
+        <div class="cardsBar">
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pd2.jpg" alt="">
+                <p>Filter017福优特刺绣字体帽</p>
+                <p><del>¥268</del><span> ¥111</span></p>
+                <div class="buy"><a target="_blank"
+                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                </div>
+            </div>
+        </div>
+        <div class="picbox">
+            <img src="img/6.png" alt="">
+        </div>
+    </section>
+    <section id="event-4" class="event event-4">
+        <h3>精选帽款 99专区</h3>
+        <div class="flexbox">
+            <div class="cardsBar">
+                <div class="card">
+                    <img src="img/pd2.jpg" alt="">
+                    <p>Filter017福优特刺绣字体帽</p>
+                    <p><del>¥268</del><span> ¥111</span></p>
+                    <div class="buy"><a target="_blank"
+                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/pd2.jpg" alt="">
+                    <p>Filter017福优特刺绣字体帽</p>
+                    <p><del>¥268</del><span> ¥111</span></p>
+                    <div class="buy"><a target="_blank"
+                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/pd2.jpg" alt="">
+                    <p>Filter017福优特刺绣字体帽</p>
+                    <p><del>¥268</del><span> ¥111</span></p>
+                    <div class="buy"><a target="_blank"
+                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/pd2.jpg" alt="">
+                    <p>Filter017福优特刺绣字体帽</p>
+                    <p><del>¥268</del><span> ¥111</span></p>
+                    <div class="buy"><a target="_blank"
+                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    </div>
+                </div>
+            </div>
+            <div class="picbox">
+                <img src="img/02.png" alt="">
+            </div>
+        </div>
     </section>
 </body>
 </html>
