--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
+                <div class="buy"><p>点击复制淘口令</p></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
+                <div class="buy"><p>点击复制淘口令</p></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a  target="_blank" href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a></div>
+                <div class="buy"><p>点击复制淘口令</p></div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a  target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
         </div>
@@ -76,32 +76,32 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
         </div>
@@ -117,32 +117,32 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><a target="_blank"
-                        href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                <div class="buy">
+                    <p>点击复制淘口令</p>
                 </div>
             </div>
         </div>
@@ -158,32 +158,32 @@
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy"><a target="_blank"
-                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    <div class="buy">
+                        <p>点击复制淘口令</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy"><a target="_blank"
-                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    <div class="buy">
+                        <p>点击复制淘口令</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy"><a target="_blank"
-                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    <div class="buy">
+                        <p>点击复制淘口令</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy"><a target="_blank"
-                            href="https://item.taobao.com/item.htm?spm=a312a.7700824.w4002-15223605224.28.38b3543faGaPEB&id=600581528242">点击复制淘口令</a>
+                    <div class="buy">
+                        <p>点击复制淘口令</p>
                     </div>
                 </div>
             </div>
@@ -199,6 +199,11 @@
         $(document).ready(function () {
             $("#backToTop").click(function () {
                 $(window).scrollTop(0);
+            });
+            $(".buy").click(function(){
+                let copyText = "【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈";
+                document.execCommand("Copy");
+                alert("Copied the text: " + copyText);
             });
             $(window).scroll(function () {
                 if(document.body.clientWidth > 769){
