--- a/index.html
+++ b/index.html
@@ -40,27 +40,33 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><p>点击复制淘口令</p></div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><p>点击复制淘口令</p></div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy"><p>点击复制淘口令</p></div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
         </div>
         <div class="click-button">
@@ -76,33 +82,33 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
         </div>
         <div class="picbox">
@@ -117,33 +123,33 @@
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                    data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                    点击复制淘口令 </button>
             </div>
             <div class="card">
                 <img src="img/pd2.jpg" alt="">
                 <p>Filter017福优特刺绣字体帽</p>
                 <p><del>¥268</del><span> ¥111</span></p>
-                <div class="buy">
-                    <p>点击复制淘口令</p>
-                </div>
+                <button class="copy buy"
+                        data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                        点击复制淘口令 </button>
             </div>
         </div>
         <div class="picbox">
@@ -158,33 +164,31 @@
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy">
-                        <p>点击复制淘口令</p>
-                    </div>
+                    <button class="copy buy"
+                        data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                        点击复制淘口令 </button>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy">
-                        <p>点击复制淘口令</p>
-                    </div>
+                    <button class="copy buy"
+                        data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                        点击复制淘口令 </button>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy">
-                        <p>点击复制淘口令</p>
-                    </div>
+                    <button class="copy buy"
+                        data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈">
+                        点击复制淘口令 </button>
                 </div>
                 <div class="card">
                     <img src="img/pd2.jpg" alt="">
                     <p>Filter017福优特刺绣字体帽</p>
                     <p><del>¥268</del><span> ¥111</span></p>
-                    <div class="buy">
-                        <p>点击复制淘口令</p>
-                    </div>
+                    <button class="copy buy" data-clipboard-text="【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈"> 点击复制淘口令 </button>
                 </div>
             </div>
             <div class="picbox">
@@ -192,6 +196,7 @@
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
@@ -200,10 +205,16 @@
             $("#backToTop").click(function () {
                 $(window).scrollTop(0);
             });
-            $(".buy").click(function(){
-                let copyText = "【Filter017福优特刺绣字体男女百搭时尚简约ins弯檐鸭舌帽棒球帽】https://m.tb.cn/h.eIyM7Pp?sm=427f34 點￡擊☆鏈﹏接，再选择瀏覽●噐○咑ぺ鐦；或椱ァ製这句话¢VZoMYtGm2FQ¢后咑閞👉淘宀┡ē👈";
-                document.execCommand("Copy");
-                alert("Copied the text: " + copyText);
+            /* 複製內容功能設定 */
+            var clipboard = new ClipboardJS('.copy');
+            //複製成功執行
+            clipboard.on('success', function (e) {
+                e.clearSelection();
+                alert("複製成功，您複製的內容為\n\n「" + e.text + "」");
+            });
+            //複製失敗執行
+            clipboard.on('error', function (e) {
+                alert("複製失敗");
             });
             $(window).scroll(function () {
                 if(document.body.clientWidth > 769){
